--- a/cmake-proxies/wxWidgets/CMakeLists.txt
+++ b/cmake-proxies/wxWidgets/CMakeLists.txt
@@ -138,33 +138,8 @@ else()
       WXUSINGDLL
    )
 
-   # For all required libs, gather all of the interface target
-   # properties and merge them into the wxWidgets target
-   foreach( lib adv base core html net qa xml )
-      get_target_property( value ${lib} INTERFACE_INCLUDE_DIRECTORIES )
-      if( value )
-         list( APPEND INCLUDES ${value} )
-         list( REMOVE_DUPLICATES INCLUDES )
-      endif()
-
-      get_target_property( value ${lib} INTERFACE_COMPILE_DEFINITIONS )
-      if( value )
-         list( APPEND DEFINES ${value} )
-         list( REMOVE_DUPLICATES DEFINES )
-      endif()
-
-      get_target_property( value ${lib} INTERFACE_COMPILE_OPTIONS )
-      if( value )
-         list( APPEND COPTS ${value} )
-         list( REMOVE_DUPLICATES COPTS )
-      endif()
-
-      get_target_property( value ${lib} INTERFACE_LINK_LIBRARIES )
-      if( value)
-         list( APPEND LIBRARIES ${lib} ${value} )
-         list( REMOVE_DUPLICATES LIBRARIES )
-      endif()
-   endforeach()
+   list( APPEND LIBRARIES wx::adv wx::base wx::core wx::html wx::net wx::qa wx::xml )
+   list( REMOVE_DUPLICATES LIBRARIES )
 
    # Do NOT split the generator expressions across multiple lines here.
    # CMake appears to have a bug and doesn't seem to handle it correctly
