accessibility not a thing on macos with this version either

--- a/cmake-proxies/wxWidgets/CMakeLists.txt
+++ b/cmake-proxies/wxWidgets/CMakeLists.txt
@@ -101,8 +101,8 @@ else()
       # Windows requires it due to missing "#include" directives
       set( wxBUILD_PRECOMP YES )
    elseif( CMAKE_SYSTEM_NAME MATCHES "Darwin" )
-      # Want accessibility
-      set( wxUSE_ACCESSIBILITY YES )
+      # wxUSE_ACCESSIBILITY is currently only supported under wxMSW
+      set( wxUSE_ACCESSIBILITY NO )
 
       # Causes problems on OSX, so turn it off
       set( wxBUILD_PRECOMP NO )
